# python-intermediate-inflammation

./: CITATION.cff  LICENCE.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
docs/: index.md
inflammation/: models.py
site/: 404.html  objects.inv
site/api/: index.html
site/search/: search_index.json
tests/: test_models.py
