[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-intermediate-inflammation"
version = "0.2.0"
requires-python = ">=3.9"
description = "A Python data management system that manages trial data used in clinical inflammation studies."
readme = "README.md"
dependencies = [
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
]

[tool.setuptools]
packages = ["inflammation"]

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "A", "B", "SIM"]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
]
